# LinearNdInterpolator

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md
include/: Delaunay.h  LinearNdInterpolator.h  Qhull.h
script/: generate_scipy_cpp_tests.py  generate_scipy_test_data.py
src/: Delaunay.cpp  LinearNdInterpolator.cpp  Qhull.cpp
tests/: generate_scipy_cpp_tests.py  test_hello_world.cpp  test_scipy_reference_auto_generated.cpp
